--- a/redesign/CSS/sparkpy.css
+++ b/redesign/CSS/sparkpy.css
@@ -1,18 +1,12 @@
 /*COLOUR SCHEME*/
 :root {
-    --background: #ff0101;
-    --link_hover: #555;
-    --navbar_background: rgb(196, 196, 196);
+    --background: #ffffff; /* main page background*/
+    --link_hover: #555; /* navbar link hover cover */
+    --navbar_background: #3874e6; /*sparkpy logo background*/
     --navbar_text_colour: red;
     --navbar_hamburger_button: black
     ;
   }
-
-
-
-
-
- 
 
 /*NAVBAR*/ 
 .navbar {
@@ -81,7 +75,9 @@
     height:90vh;
      
     grid-template-columns: 30% 70%; /* editor unity*/
-    grid-template-rows: 50px 80% 20% /*settings editor shell*/
+    grid-template-rows: 50px 70% 30%; /*settings editor shell*/
+
+    grid-column-gap: 50px;
      
 }
 
