updated fonts and added reset scene

--- a/redesign/CSS/sparkpy.css
+++ b/redesign/CSS/sparkpy.css
@@ -17,6 +17,12 @@
     color: var(--navbar_text_colour);
 }
 
+.sparkpy-fonts{
+
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+
+}
+
 .logo-title{
     
     margin: .5rem auto;
