--- a/redesign/CSS/settingsRow.css
+++ b/redesign/CSS/settingsRow.css
@@ -1,6 +1,6 @@
 
   
-  .toggle1-container
+  .toggle-container
    {
     width: 37px;
     height: 15px;
@@ -17,11 +17,7 @@
   top: 50%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-  }
-  
-  /* Style 1 */
-  .toggle1-container {
-    border-radius: 15px;
+  border-radius: 15px;
   }
   
   .toggle {
@@ -40,7 +36,7 @@
     left: 00px;
   }
   
-  .inactive1 {
+  .toggle-active {
     transform: translateX(calc(25px - 3px));
     border: 2px solid #10d610;
     background-color: rgba(0, 255, 0, 0.3);
