--- a/CSS/sparkpy.css
+++ b/CSS/sparkpy.css
@@ -5,7 +5,10 @@
     --navbar_background: #fefefe; /*sparkpy logo background*/
     --navbar_text_colour: red;
     --navbar_hamburger_button: black;
-  }
+    --border_size: 1px;  
+    --border_colour: rgb(210, 210, 210);
+
+}
 
 /*NAVBAR*/ 
 .navbar {
@@ -84,6 +87,7 @@
     grid-template-rows: 50px 70% 30%; /*settings editor shell*/
 
     grid-column-gap: 50px;
+    
      
 }
 
@@ -92,7 +96,8 @@
     grid-column: 2 / 3;
      width: 100%;
      height: 100%; 
-     border: none;
+     
+     /*border: none; */
                              
   }
 
@@ -108,7 +113,7 @@
     grid-template-rows: 1fr;
     column-gap: 5px;
     row-gap: 0px;
-    
+    border: var(--border_size) var(--border_colour) solid ; 
     }
 
     .settings-play-icon { grid-area: 1 / 1 / 2 / 2; }
@@ -206,6 +211,7 @@
             grid-template-rows: 10% 20% 60% 10%;
             grid-column-gap: 0px;
             grid-row-gap: 0px;
+            
             }
         
             .grid-item-settings { grid-area: 1 / 1 / 2 / 2; }
