--- a/CSS/sparkpy.css
+++ b/CSS/sparkpy.css
@@ -1,12 +1,17 @@
 /*COLOUR SCHEME*/
 :root {
-    --background: #fefefe; /* main page background*/
+    --background: #ffffff; /* main page background*/
     --link_hover: #555; /* navbar link hover cover */
-    --navbar_background: #fefefe; /*sparkpy logo background*/
+    --navbar_background: #8f8f8f; /*sparkpy logo background*/
     --navbar_text_colour: red;
     --navbar_hamburger_button: black;
-    --border_size: 1px;  
-    --border_colour: rgb(210, 210, 210);
+    --border_size_editor: 1px;  
+    --border_colour_editor: rgb(210, 210, 210);
+
+    --border_size_menu: 0px;  
+    --border_colour_menu: rgb(132, 132, 132);
+
+    --menu_gaps: 15px;
 
 }
 
@@ -25,6 +30,12 @@
 
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 
+}
+
+.logo-title{
+    
+    margin: .5rem auto;
+    text-align: center;
 }
 
 .logo-title{
@@ -86,7 +97,7 @@
     grid-template-columns: 30% 70%; /* editor unity*/
     grid-template-rows: 50px 70% 30%; /*settings editor shell*/
 
-    grid-column-gap: 50px;
+    grid-column-gap: 0px;
     
      
 }
@@ -101,74 +112,190 @@
                              
   }
 
-/* SETTINGS EMBEDDED GRID- embedded into main grid above */
-.settings-grid {
-    display: grid;
-    /* grid-template-columns: min-content min-content min-content min-content 1fr; */
-    
-    /*grid-template-columns: min-content min-content auto auto auto;*/
-    
-    /* size of the coloumns */
-    grid-template-columns: min-content min-content min-content min-content auto; /*play, settings toggle, samples/themes, laod/font size, save*/
-    grid-template-rows: 1fr;
-    column-gap: 5px;
-    row-gap: 0px;
-    border: var(--border_size) var(--border_colour) solid ; 
-    }
 
-    .settings-play-icon { grid-area: 1 / 1 / 2 / 2; }
-    .settings-settings-icon { grid-area: 1 / 2 / 2 / 3; }
-    .settings-themes-dropdown { grid-area: 1 / 3 / 2 / 4;  /* also the editor theme when settings toggle is active*/
-         
-        overflow: hidden;  /* NEW */
-        min-width: 0;      /* NEW; needed for Firefox */
-        justify-self: start;}
-    .settings-load-icon { grid-area: 1 / 4 / 2 / 5;  justify-self: end;} /* also the font size when settings toggle is active*/
-    .settings-save-icon { grid-area: 1 / 5 / 2 / 6; justify-self: start;} 
+
+
+
+/* NEW MENU BAR TITLE EMBEDDED */
+.grid-parent-menu 
+{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 5px;
+    grid-row-gap: 0px;
+    /*border: var(--border_size_menu) solid var(--border_colour_menu);*/ 
+    
+    width: min-content;
+    height: min-content;
+    margin-left: 2px;
+    margin-top: 5px;
+    white-space: nowrap;
+}
+
+.grid-cell-menu-play { grid-area: 1 / 1 / 2 / 2; cursor: pointer; height: min-content; width: min-content; display:flex; }
+.grid-cell-menu-filename { grid-area: 1 / 2 / 2 / 3; border-right: solid var(--border_size_menu) var(--border_colour_menu);   /*border: 1px solid black;*/}
+.grid-cell-menu-local-load { grid-area: 1 / 3 / 2 / 4; /*border: 1px solid black;*/}
+.grid-cell-menu-local-save  { grid-area: 1 / 4 / 2 / 5; border-right: solid var(--border_size_menu) var(--border_colour_menu)/* border: 1px solid black;*/ }
+.grid-cell-menu-cloud-load{ grid-area: 1 / 5 / 2 / 6; /*border: 1px solid black;*/}
+.grid-cell-menu-cloud-save { grid-area: 1 / 6 / 2 / 7; border-right: solid var(--border_size_menu) var(--border_colour_menu)/*border: 1px solid black;*/}
+.grid-cell-menu-status1{ grid-area: 1 / 7 / 2 / 8; /*border: 1px solid black;*/}
+.grid-cell-menu-theme{ grid-area: 1 / 8 / 2 / 9; /*border: 1px solid black; */}
+.grid-cell-menu-font-size { grid-area: 1 / 9 / 2 / 10; /*border: 1px solid black;*/}
+.grid-cell-menu-status2 { grid-area: 1 / 10 / 2 / 11; border-right: solid var(--border_size_menu) var(--border_colour_menu)/*border: 1px solid black; */}
+
 
 
 .play-icon {
-    width: 3em;
-    height: 3em;
+    width: 1.5em;
+    height: 1.5em;
     background: url("/Images/icons/play_icon.svg")  no-repeat;
     border: none;
     cursor: pointer;
     float: left;
-    padding-right: 40px;
+    margin-left: 5px;
+    margin-top: 10px;
+    
+    /*padding-right: 40px;*/
+    transform: scale(1);
+  }
+
+  .filename-box
+  {
+      background-color : #d1d1d1; 
+      border: none;
+      max-width:70px; 
+      padding: 10px 10px; line-height: 10px; /* sets the hieght*/
+      margin-top:2px; 
+      margin-right:var(--menu_gaps);
+      margin-left:5px;
+      display:block;
   }
 
 .load-icon {
-    width: 3em;
-    height: 3em;
+    width: 1.8em;
+    height: 1.5em;
     background: url("/Images/icons/load_icon.svg")  no-repeat;
     border: none;
     cursor: pointer;
     float: left;
-    padding-right: 40px;
-    transform: scale(0.8);
+    /*padding-right: 40px;*/
+    margin-left: 2px;
+    margin-top: 12px;
+    transform: scale(1);
   }
 
   .save-icon {
-    width: 3em;
-    height: 3em;
+    width: 1.8em;
+    height: 1.5em;
     background: url("/Images/icons/save_icon.svg")  no-repeat;
     border: none;
     cursor: pointer;
     float: left;
-    padding-right: 40px;
-    transform: scale(0.8);
+    margin-left: 2px;
+    margin-top: 12px;
+    margin-right: var(--menu_gaps);
+    transform: scale(1);
   }
 
-  .settings-icon {
-    width: 50px;
-    height: 50px;
-    background: url("/Images/icons/settings_icon.svg")  no-repeat;
+  .cloud-load-icon {
+    width: 1.8em;
+    height: 1.5em;
+    background: url("/Images/icons/cloud_load_icon.svg")  no-repeat;
     border: none;
     cursor: pointer;
     float: left;
-    transform: scale(0.5);
-
+    margin-left: 2px;
+    margin-top: 12px;
+    transform: scale(1);
   }
+
+  .cloud-save-icon {
+    width: 1.8em;
+    height: 1.5em;
+    background: url("/Images/icons/cloud_save_icon.svg")  no-repeat;
+    border: none;
+    cursor: pointer;
+    float: left;
+    margin-left: 2px;
+    
+    margin-top: 12px;
+    transform: scale(1);
+    margin-right: var(--menu_gaps);
+  }
+
+  .grid-cell-menu-font-size
+  {
+    margin-left: 0px;
+    margin-top: 10px;
+    
+  }
+  .fontsize-box
+  {
+      background-color : #d1d1d1; 
+      border: none;
+      width: 35px; height: 20px; padding: 1px;
+      
+  }
+  .status1
+  {
+    margin-left: 0px;
+  }
+
+   
+
+
+  
+  /*Toggle box*/
+  .toggle-container
+   {
+    width: 37px;
+    height: 15px;
+    background-color: rgb(240, 240, 240);
+    display: flex;
+    position: relative;
+    border: 3px solid #111;
+    padding-left: 0;
+    
+    box-shadow: -1px 3px 22px 0px rgba(0, 0, 0, 0.75);
+
+    margin: 0;
+    margin-top: 3px;
+  position: relative;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  border-radius: 15px;
+  }
+
+  .toggle-container-active
+  {
+    background-color: rgb(18, 18, 18);
+  }
+  
+  .toggle {
+    position: absolute;
+    height: 12px;
+    width: 12px;
+    background-color: grey;
+    display: block;
+    border-radius: 15px;
+    border: 2px solid rgb(30, 30, 30);
+    background-color: rgba(0, 0, 0, 1);
+    transition: all 0.3s ease;
+  }
+  
+  .toggle {
+    left: 00px;
+  }
+  
+  .toggle-active {
+    transform: translateX(calc(25px - 3px));
+    border: 2px solid #f3f3f3;
+    background-color: rgba(255, 255, 255, 1);
+  }
+
+
 
 /* SETTINGS ENDS */
 
