--- a/CSS/sparkpy.css
+++ b/CSS/sparkpy.css
@@ -10,8 +10,13 @@
 
     --border_size_menu: 0px;  
     --border_colour_menu: rgb(132, 132, 132);
-
     --menu_gaps: 15px;
+
+    --samples_border_size: 2px;
+    --samples_border_colour: rgb(132, 132, 132);;  
+     
+
+
 }
 
 /*NAVBAR*/ 
@@ -89,7 +94,7 @@
 }
 
 /*MAIN LAYOUT GRID*/
-.grid-container{
+.main-grid-container{
     display: grid;
     height:90vh;
      
@@ -285,15 +290,14 @@
 /* sign in with gooogle button*/
   .login_form
   {
-      display: none;
-      border: 3px solid #181818;
-      z-index: 9;
+    display: none;
+    border: 3px solid #181818;
+    z-index: 9;
        
-      height: min-content;
-      background-color:#f3f3f3;
-      position: absolute;
-      width:fit-content;
-       
+    height: min-content;
+    background-color:#f3f3f3;
+    position: absolute;
+    width:fit-content;  
   }
 
   .login_form_cancel_btn
@@ -365,6 +369,93 @@
     background-color: rgba(255, 255, 255, 1);
   }
 
+.samples_container
+{
+  display: none;
+  border: 3px solid #181818;
+  z-index: 9;
+     
+  
+  background-color:#f3f3f3;
+  position: absolute;
+  
+  /*height: min-content;
+  width:fit-content;*/
+     
+}
+
+.center_element
+{
+    
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
+}
+
+.blur_element
+{
+  filter: blur(10px);
+}
+
+.samples_video
+{
+  width:200px; 
+}
+
+.samples_category_basic
+{ 
+background-color: aqua;
+}
+
+.samples_description 
+{
+  text-align: center;
+}
+ 
+
+
+.grid-samples-parent {
+  display: grid;
+
+  
+  grid-template-columns: repeat(5,  auto);
+  grid-template-rows: repeat(5, auto);
+
+  
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  /*border: var(--samples_border_size) solid */
+  border: var(--samples_border_size) solid var(--samples_border_colour);
+
+
+  
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+
+
+  }
+  
+  .grid-samples-div1 { grid-area: 1 / 1 / 2 / 2; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div2 { grid-area: 1 / 2 / 2 / 3; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div3 { grid-area: 1 / 3 / 2 / 4; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div4 { grid-area: 1 / 4 / 2 / 5; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div5 { grid-area: 1 / 5 / 2 / 6; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div6 { grid-area: 2 / 1 / 3 / 2; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div7 { grid-area: 2 / 2 / 3 / 3; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div8 { grid-area: 2 / 3 / 3 / 4; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div9 { grid-area: 2 / 4 / 3 / 5; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div10 { grid-area: 2 / 5 / 3 / 6; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div11 { grid-area: 3 / 1 / 4 / 2; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div12 { grid-area: 3 / 2 / 4 / 3; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div13 { grid-area: 3 / 3 / 4 / 4; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div14 { grid-area: 3 / 4 / 4 / 5; border: var(--samples_border_size) solid var(--samples_border_colour);}
+  .grid-samples-div15 { grid-area: 3 / 5 / 4 / 6; border: var(--samples_border_size) solid var(--samples_border_colour);}
+
+
 
 
 /* SETTINGS ENDS */
@@ -402,7 +493,7 @@
         display: flex;
     }
 
-        .grid-container {
+        .main-grid-container {
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: 10% 20% 60% 10%;
