--- a/CSS/animations.css
+++ b/CSS/animations.css
@@ -1,5 +1,6 @@
 /*https://anicollection.github.io/#/*/
 
+/****** SHAKE START *******/
   @keyframes shake {
     0%, 100% {
       -webkit-transform: translate3d(0, 0, 0);
@@ -24,8 +25,8 @@
       transform: translate3d(10px, 0, 0)
     }
   }
-
-
+/****** SHAKE END *******/
+/****** LIGHT IN START *******/
   @keyframes lightSpeedIn {
     0% {
       -webkit-transform: translate3d(100%, 0, 0) skewX(-30deg);
@@ -58,7 +59,8 @@
     -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out
   }
-
+/****** LIGHT IN END *******/
+/****** LIGHT OUT START *******/
   @keyframes lightSpeedOut {
     0% {
       opacity: 1
@@ -76,6 +78,73 @@
     -webkit-animation-timing-function: ease-in;
     animation-timing-function: ease-in
   }
+/****** LIGHT OUT END *******/
+
+/****** BOUNCE IN START *******/
+ @keyframes bounceInDown {
+  0%, 100%, 60%, 75%, 90% {
+    -webkit-transition-timing-function: cubic-bezier(0.215, .61, .355, 1);
+    transition-timing-function: cubic-bezier(0.215, .61, .355, 1)
+  }
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -3000px, 0);
+    -ms-transform: translate3d(0, -3000px, 0);
+    transform: translate3d(0, -3000px, 0)
+  }
+  60% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 25px, 0);
+    -ms-transform: translate3d(0, 25px, 0);
+    transform: translate3d(0, 25px, 0)
+  }
+  75% {
+    -webkit-transform: translate3d(0, -10px, 0);
+    -ms-transform: translate3d(0, -10px, 0);
+    transform: translate3d(0, -10px, 0)
+  }
+  90% {
+    -webkit-transform: translate3d(0, 5px, 0);
+    -ms-transform: translate3d(0, 5px, 0);
+    transform: translate3d(0, 5px, 0)
+  }
+  100% {
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none
+  }
+}
+.bounceInDown {
+  -webkit-animation-name: bounceInDown;
+  animation-name: bounceInDown
+}
+
+/****** BOUNCE IN END *******/
+
+@keyframes bounceOutUp {
+  20% {
+    -webkit-transform: translate3d(0, -10px, 0);
+    -ms-transform: translate3d(0, -10px, 0);
+    transform: translate3d(0, -10px, 0)
+  }
+  40%,
+  45% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 20px, 0);
+    -ms-transform: translate3d(0, 20px, 0);
+    transform: translate3d(0, 20px, 0)
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -2000px, 0);
+    -ms-transform: translate3d(0, -2000px, 0);
+    transform: translate3d(0, -2000px, 0)
+  }
+}
+.bounceOutUp {
+  -webkit-animation-name: bounceOutUp;
+  animation-name: bounceOutUp
+}
  
 /*
 .anim_control{ animation: shake 1s}
@@ -83,6 +152,9 @@
 
 .anim_login_enter{ animation: lightSpeedIn 1s}
 .anim_login_exit{ animation: lightSpeedOut 1s}
+
+.anim_samples_enter{ animation: bounceInDown 1s}
+.anim_samples_exit{ animation: bounceOutUp 1s}
 
 
 
